--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.6.1",
     "faker": "^4.1.0",
     "jest": "^22.4.3",
-    "puppeteer": "^1.3.0"
+    "puppeteer": "^1.3.0",
+    "lodash": ">=4.17.11"
   }
 }
